# certus

./: .gitignore  README.md  pyproject.toml  requirements-train.txt
certus/: __init__.py  cli.py  decorator.py  generator.py  mcp_server.py  pytest_plugin.py
certus/checker/: __init__.py  cache.py  composition.py  dynamic.py  report.py  runner.py  validation.py
certus/generation/: core.py  prompts.py
certus/pipeline/: __init__.py  augmenter.py  collector.py  formatter.py  prompts.py  runner.py  test_derived.py  validator.py
certus/sidecar/: cache.py  hashing.py  models.py  store.py
data/: benchmark_results.json  doctest_comparison.json  eval_14b_output.txt  eval_base_fair_output.txt  eval_base_output.txt  eval_generated.json  eval_generated_14b.json  eval_generated_base.json  eval_generated_base_fair.json  eval_report.json  eval_samples.json
examples/: demo.py  real_world.py
scripts/: benchmark_real_world.py  collect_samples.py  compare_doctest_vs_certus.py  eval_check.py  eval_generate.py  infer_certus.py  serve_certus.py  train_certus.py  validate_and_format.py
tests/: test_augmenter.py  test_cache.py  test_cli_new_commands.py  test_collector.py  test_composition.py  test_decorator.py  test_dynamic.py  test_formatter.py  test_generation_core.py  test_generation_prompts.py  test_generator.py  test_mcp_server.py  test_pytest_plugin.py  test_report.py  test_runner.py  test_runner_pipeline.py  test_safe_subset.py  test_schema.py  test_seeds.py  test_sidecar_cache.py  test_sidecar_checker.py  test_sidecar_hashing.py  test_sidecar_models.py  test_sidecar_store.py  test_structural_mode.py  test_validation.py  test_validator.py
(+49 files in other folders)
