[project]
name = "certus"
version = "0.1.0"
description = "Certificate-augmented generation for verifiable AI code"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "hypothesis>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
checker = ["crosshair-tool", "z3-solver"]
pipeline = ["anthropic", "datasets", "requests"]
training = ["unsloth", "transformers", "peft", "trl"]
all = ["certus[checker,pipeline,training]"]

[project.scripts]
certus = "certus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
