[project]
name = "certus"
version = "0.1.0"
description = "Correctness certificates for AI-generated code. A finetuned model proposes what your function guarantees; an automated checker proves it or finds a counterexample."
license = {text = "Apache-2.0"}
authors = [{name = "Anish Shrestha"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "hypothesis>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
checker = ["crosshair-tool", "z3-solver"]
pipeline = ["anthropic", "datasets", "requests"]
training = ["unsloth", "transformers", "peft", "trl"]
all = ["certus[checker,pipeline,training]"]

[project.scripts]
certus = "certus.cli:main"

[project.entry-points.pytest11]
certus = "certus.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytester"
